balance-service/kubefiles/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-app-green
  namespace: bank-app
  labels:
    version: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: balance-app
      namespace: bank-app
  template:
    metadata:
      labels:
        app: balance-app
        namespace: bank-app
        version: green
    spec:
      containers:
        - name: balance-app
          image: jedisonvieira/balance-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
