balance-service/kubefiles/service.yml
apiVersion: v1
kind: Service
metadata:
  name: balance-service
  namespace: bank-app
  annotations:
    # Use the cloud provider integration to create a load balancer for this service
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: balance-app
    namespace: bank-app
